<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/tab_all" />
    <item
        android:id="@+id/nav_lost"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/tab_lost" />
    <item
        android:id="@+id/nav_publish"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/publish" />
    <item
        android:id="@+id/nav_found"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/tab_found" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/tab_profile" />
</menu>
